Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/bankAccountName__c.field-meta.xml
<CustomField>
    <fullName>bankAccountName__c</fullName>
    <label>bankAccountName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>