Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/bankCountryCode__c.field-meta.xml
<CustomField>
    <fullName>bankCountryCode__c</fullName>
    <label>bankCountryCode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>