Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/bankName__c.field-meta.xml
<CustomField>
    <fullName>bankName__c</fullName>
    <label>bankName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>