Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/bic__c.field-meta.xml
<CustomField>
    <fullName>bic__c</fullName>
    <label>bic</label>
    <length>40</length>
    <type>Text</type>
</CustomField>