Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/billingAddress2__c.field-meta.xml
<CustomField>
    <fullName>billingAddress2__c</fullName>
    <label>billingAddress2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>