Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/billingAddress3__c.field-meta.xml
<CustomField>
    <fullName>billingAddress3__c</fullName>
    <label>billingAddress3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>