Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/billingAddressIsLocked__c.field-meta.xml
<CustomField>
    <fullName>billingAddressIsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>billingAddressIsLocked</label>
    <type>Checkbox</type>
</CustomField>