Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/billingAddressLastName__c.field-meta.xml
<CustomField>
    <fullName>billingAddressLastName__c</fullName>
    <label>billingAddressLastName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>