Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/billingAddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>billingAddressPostalCode__c</fullName>
    <label>billingAddressPostalCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>