Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/creditCardExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>creditCardExpirationDate__c</fullName>
    <label>creditCardExpirationDate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>