Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/creditCardID__c.field-meta.xml
<CustomField>
    <fullName>creditCardID__c</fullName>
    <label>creditCardID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>