Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/creditCardToken__c.field-meta.xml
<CustomField>
    <fullName>creditCardToken__c</fullName>
    <label>creditCardToken</label>
    <length>60</length>
    <type>Text</type>
</CustomField>