Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/currencyCode__c.field-meta.xml
<CustomField>
    <fullName>currencyCode__c</fullName>
    <label>currencyCode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>