Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/eventSourceID__c.field-meta.xml
<CustomField>
    <fullName>eventSourceID__c</fullName>
    <label>eventSourceID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>