Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/invoiceDate__c.field-meta.xml
<CustomField>
    <fullName>invoiceDate__c</fullName>
    <label>invoiceDate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>