Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/paymentMethod__c.field-meta.xml
<CustomField>
    <fullName>paymentMethod__c</fullName>
    <label>paymentMethod</label>
    <length>20</length>
    <type>Text</type>
</CustomField>