Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/poNumber__c.field-meta.xml
<CustomField>
    <fullName>poNumber__c</fullName>
    <description>Order&apos;s Purchase Order Number.</description>
    <label>poNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>