Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/shippingAddress1__c.field-meta.xml
<CustomField>
    <fullName>shippingAddress1__c</fullName>
    <label>shippingAddress1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>