Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/shippingAddress2__c.field-meta.xml
<CustomField>
    <fullName>shippingAddress2__c</fullName>
    <label>shippingAddress2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>