Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/shippingAddressIsPrimary__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressIsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag controls the Shipping Address Primary.</description>
    <label>shippingAddressIsPrimary</label>
    <type>Checkbox</type>
</CustomField>