Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/shippingAddressLastName__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressLastName__c</fullName>
    <label>shippingAddressLastName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>