Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/shippingAddressPrimaryPhone__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressPrimaryPhone__c</fullName>
    <label>shippingAddressPrimaryPhone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>