Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/shippingTaxExempt__c.field-meta.xml
<CustomField>
    <fullName>shippingTaxExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>shippingTaxExempt</label>
    <type>Checkbox</type>
</CustomField>