Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out_V1__e/fields/systemOfOriginID__c.field-meta.xml
<CustomField>
    <fullName>systemOfOriginID__c</fullName>
    <label>systemOfOriginID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>